--- a/.github/workflows/release-follow-up.yaml
+++ b/.github/workflows/release-follow-up.yaml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: create-homebrew-formula
     steps:
+      - uses: actions/checkout@v2
+
       - uses: actions/download-artifact@v2
         with:
           path: "dist"
@@ -34,6 +36,8 @@ jobs:
     runs-on: macos-latest
     needs: create-homebrew-formula
     steps:
+      - uses: actions/checkout@v2
+
       - uses: actions/download-artifact@v2
         with:
           path: "dist"
@@ -46,10 +50,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ test-formula-linux, test-formula-mac ]
     steps:
+      - uses: actions/checkout@v2
+
       - uses: actions/download-artifact@v2
 
       - name: Publish updated homebrew formula
-        run: homebrew-formula-publish
+        run: make homebrew-formula-publish
 
   update_version_check_file:
     name: Update version file
