--- a/.github/workflows/release-follow-up.yaml
+++ b/.github/workflows/release-follow-up.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          path: "./dist/syft.rb"
+          path: "dist"
 
   test-formula-linux:
     name: Test homebrew formula (Linux)
@@ -23,6 +23,18 @@ jobs:
     needs: create-homebrew-formula
     steps:
       - uses: actions/checkout@v2
+
+      # We are expecting this cache to have been created during the "Build-Snapshot-Artifacts" job in the "Acceptance" workflow.
+      - name: Restore bootstrap cache
+        id: cache
+        uses: actions/cache@v2.1.3
+        with:
+          path: |
+            ${{ github.workspace }}/.tmp
+          key: ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('Makefile') }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-
+            ${{ runner.os }}-go-${{ env.GO_VERSION }}-
 
       - uses: actions/download-artifact@v2
         with:
@@ -37,6 +49,18 @@ jobs:
     needs: create-homebrew-formula
     steps:
       - uses: actions/checkout@v2
+
+      # We are expecting this cache to have been created during the "Build-Snapshot-Artifacts" job in the "Acceptance" workflow.
+      - name: Restore bootstrap cache
+        id: cache
+        uses: actions/cache@v2.1.3
+        with:
+          path: |
+            ${{ github.workspace }}/.tmp
+          key: ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('Makefile') }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-
+            ${{ runner.os }}-go-${{ env.GO_VERSION }}-
 
       - uses: actions/download-artifact@v2
         with:
@@ -53,6 +77,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: actions/download-artifact@v2
+        with:
+          path: "dist"
 
       - name: Publish updated homebrew formula
         run: make homebrew-formula-publish
