--- a/.github/workflows/release-follow-up.yaml
+++ b/.github/workflows/release-follow-up.yaml
@@ -4,81 +4,14 @@ on:
     types: [published]
 
 jobs:
-  create-homebrew-formula:
-    name: Create homebrew formula
+  publish-homebrew-formula:
+    name: Publish homebrew formula
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Generate homebrew formula
         run: make homebrew-formula-generate
-
-      - uses: actions/upload-artifact@v2
-        with:
-          path: "dist"
-
-  test-formula-linux:
-    name: Test homebrew formula (Linux)
-    runs-on: ubuntu-latest
-    needs: create-homebrew-formula
-    steps:
-      - uses: actions/checkout@v2
-
-      # We are expecting this cache to have been created during the "Build-Snapshot-Artifacts" job in the "Acceptance" workflow.
-      - name: Restore bootstrap cache
-        id: cache
-        uses: actions/cache@v2.1.3
-        with:
-          path: |
-            ${{ github.workspace }}/.tmp
-          key: ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('Makefile') }}
-          restore-keys: |
-            ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-
-            ${{ runner.os }}-go-${{ env.GO_VERSION }}-
-
-      - uses: actions/download-artifact@v2
-        with:
-          path: "dist"
-
-      - name: Test homebrew formula
-        run: make homebrew-formula-test
-
-  test-formula-mac:
-    name: Test homebrew formula (Mac)
-    runs-on: macos-latest
-    needs: create-homebrew-formula
-    steps:
-      - uses: actions/checkout@v2
-
-      # We are expecting this cache to have been created during the "Build-Snapshot-Artifacts" job in the "Acceptance" workflow.
-      - name: Restore bootstrap cache
-        id: cache
-        uses: actions/cache@v2.1.3
-        with:
-          path: |
-            ${{ github.workspace }}/.tmp
-          key: ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-${{ hashFiles('Makefile') }}
-          restore-keys: |
-            ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}-
-            ${{ runner.os }}-go-${{ env.GO_VERSION }}-
-
-      - uses: actions/download-artifact@v2
-        with:
-          path: "dist"
-
-      - name: Test homebrew formula
-        run: make homebrew-formula-test
-
-  publish-formula:
-    name: Publish homebrew formula
-    runs-on: ubuntu-latest
-    needs: [ test-formula-linux, test-formula-mac ]
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v2
-        with:
-          path: "dist"
 
       - name: Publish updated homebrew formula
         run: make homebrew-formula-publish
@@ -121,7 +54,7 @@ jobs:
 
   notify-on-failure:
     name: Notify on failure
-    needs: [build_and_push_container_image, update_version_check_file, publish-formula]
+    needs: [build_and_push_container_image, update_version_check_file, publish-homebrew-formula]
     runs-on: ubuntu-latest
     if: always()
     steps:
