add git config to release pipeline
Signed-off-by: Alex Goodman <alex.goodman@anchore.com>

--- a/.github/workflows/release-follow-up.yaml
+++ b/.github/workflows/release-follow-up.yaml
@@ -32,6 +32,11 @@ jobs:
       - name: Generate homebrew formula
         run: make homebrew-formula-generate
 
+      - name: Set git configuration
+        run: |
+          git config user.name syft-release-pipeline
+          git config user.email syft-release-pipeline@anchore.com
+
       - name: Publish updated homebrew formula
         run: make homebrew-formula-publish
         env:
