--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Restore bootstrap cache
-        id: cache
+        id: bootstrap-cache
         uses: actions/cache@v2.1.3
         with:
           path: |
@@ -58,10 +58,15 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.SIGNING_GPG_PASSPHRASE }}
 
+      - name: Save acceptance test image
+        run: make save-acceptance-test-image
+
       - uses: actions/upload-artifact@v2
         with:
           name: artifacts
-          path: snapshot/**/*
+          path: |
+            snapshot/**/*
+            .tmp/acceptance-image.tar
 
       - uses: 8398a7/action-slack@v3
         with:
@@ -82,7 +87,9 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: artifacts
-          path: snapshot
+          path: |
+            snapshot
+            .tmp/acceptance-image.tar
 
       - name: Run Acceptance Tests (Linux)
         run: make acceptance-linux
@@ -106,7 +113,12 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: artifacts
-          path: snapshot
+          path: |
+            snapshot
+            .tmp/acceptance-image.tar
+
+      - run: |
+          ls -al snapshot
 
       - name: Run Acceptance Tests (Mac)
         run: make acceptance-mac
